--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
 Adeniyi Olateru-Olagbegi <niyiolagbegi@gmail.com>
-Adesanya Ayomide <adesanya547@gmail.com>
+Adesanya Ayomide Abraham <adesanya547@gmail.com>
